Prototipo de web

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@ and open the template in the editor.
                     <li><a href="">Inicio</a></li>
                     <li><a href="Sobre_nosotros/index.html">Sobre nosotros</a></li>
                     <li><a href="Noticias/index.html">Noticias</a></li>
-                    <li><a href="#">Actividades</a></li>
+                    <li><a href="Actividades/index.html">Actividades</a></li>
                     <li><a href="#">Apuntate/Donaciones</a></li>
                     <li><a href="#">Login miembros</a></li>
                 </ul>
