--- a/web/Noticias/index.html
+++ b/web/Noticias/index.html
@@ -23,7 +23,7 @@ and open the template in the editor.
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="../Sobre_nosotros/index.html">Sobre nosotros</a></li>
                     <li><a href="">Noticias</a></li>
-                    <li><a href="#">Actividades</a></li>
+                    <li><a href="../Actividades/index.html">Actividades</a></li>
                     <li><a href="#">Apuntate/Donaciones</a></li>
                     <li><a href="#">Login miembros</a></li>
                 </ul>
