Prototipo de web

--- a/web/index.html
+++ b/web/index.html
@@ -17,18 +17,18 @@ and open the template in the editor.
             <img src="Imagenes/logo.png" alt="Logo">
             <nav>
                 <ul>
-                    <li><a href=""><Inicio</a></li>
-                    <li><a href="Sobre_nosotros/index.html">Sobre nosotros</a></li>
-                    <li><a href="Noticias/index.html">Noticias</a></li>
-                    <li><a href="Actividades/index.html">Actividades</a></li>
-                    <li><a href="Apuntate_Donaciones/index.html">Apuntate/Donaciones</a></li>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="sobre_nosotros.html">Sobre nosotros</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="actividades.html">Actividades</a></li>
+                    <li><a href="apunt_donacion.html">Apuntate/Donaciones</a></li>
                     <li><a href="#">Login miembros</a></li>
                 </ul>
             </nav>
         </header>
         <section id="content">
-            <div id="ImgPrincipal"><img src="Imagenes/logo.png" alt="Imagen"></div>
-            <div id="lineanoticias"><h2>Noticias</h2><hr class="linea3"/></div>
+            <div id="ImgPrincipal"><img src="Imagenes/img1.jpg" alt="Imagen"></div>
+            <div id="lineanoticias"><h2>Noticias</h2></div>
             <div class="contenedor" id="cont1">
                 <div class="cuadro" >
                     <img src="Imagenes/img3.png">
@@ -47,7 +47,7 @@ and open the template in the editor.
                     <div class="footcuadro"><h4>Titulo noticia</h4></div>
                 </div>
             </div>
-            <div id="lineaactividades"><h2>Actividades</h2><hr class="linea3"/></div>
+            <div id="lineaactividades"><h2>Actividades</h2></div>
             <div class="contenedor" id="cont2">
                 <div class="cuadro" >
                     <img src="Imagenes/img3.png">
